# diffpy.pdfmorph

./: .TUTORIAL.rst.swp  .buildinfo  .codecov.yml  .coveragerc  .flake8  .gitattributes  .gitignore  .isort.cfg  .pre-commit-config.yaml  .travis.yml  AUTHORS.rst  CHANGELOG.rst  INSTALL.txt  LICENSE.txt  MANIFEST.in  README.rst  README.txt  TODO.txt  TUTORIAL.rst  environment.yml  genindex.html  index.html  license.html  mod_log.html  mod_pdfplot.html  mod_refine.html  mod_tools.html  morph_helpers.html  morphs.html  objects.inv  package.html  prevent_commit_to_main.sh  py-modindex.html  pyproject.toml  quickstart.html  release.html  rever.xsh  run_tests.py  search.html  searchindex.js  (+2 more)
.codespell/: ignore_words.txt
_modules/: index.html
_sources/: index.rst.txt  morphs.rst.txt  quickstart.rst.txt  release.rst.txt  tutorialfiles.rst.txt
api/: diffpy.pdfmorph.example_package.html  diffpy.pdfmorph.html  diffpy.pdfmorph.morph_helpers.html  diffpy.pdfmorph.morphs.html
diffpy/: __init__.py
doc/: Makefile
examples/: example.rst
news/: error_fixes.rst  explicit_paths.rst  fix_rever.rst  folder.rst  hotfix.rst  line79.rst  morph_func.rst  morph_sequence.rst  morphshift.rst  multiple_morphs.rst  new_parser_api.rst  patch_style.rst  pdfmorphpy.rst  re-cut.rst  reqs.rst  titles.rst
requirements/: docs.txt  run.txt  test.txt
tests/: conftest.py  testTools.py  test_morph_func.py  test_morphchain.py  test_morphpdftordf.py  test_morphrdftopdf.py  test_morphresolution.py  test_morphrgrid.py  test_morphscale.py  test_morphshape.py  test_morphshift.py  test_morphsmear.py  test_morphstretch.py  test_pdfmorphapp.py  test_pdfmorphio.py  test_pdfplot.py  test_refine.py  test_tools.py  test_version.py  testmorphchain.py  testmorphrdftopdf.py  testmorphresolution.py  testmorphrgrid.py  testmorphshape.py  testmorphsmear.py  testmorphstretch.py  (+2 more)
(+200 files in other folders)
